weather_app/templates/solitaire-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solitaire-service
spec:
  type: NodePort
  selector:
    app: solitaire
  ports:
    - port: 32400
      targetPort: 80
