weather_app/templates/weatherapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-service
spec:
  type: NodePort
  selector:
    app: weatherapp
  ports:
    - port: 32300
      targetPort: 8000
