weather_app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: weather.aviad.click
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: weatherapp-service
                port:
                  number: 32300
    - host: solitaire.aviad.click
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: solitaire-service
                port:
                  number: 32400
